--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meu-projeto-chamados",
-  "homepage": "https://LucasFelipeJesus.github.io/portal-chamados",
+  "homepage": "https://LucasFelipeJesus.github.io/meu-projeto-chamados",
   "private": true,
   "version": "0.1.5",
   "type": "module",
